--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,17 @@
-.App {
-  text-align: center;
+body {
+  background-color: #F8F5F8;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Change the color of the scrollbar track */
+::-webkit-scrollbar {
+  width: 8px;
+  background-color: #E4D6E2
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Change the width and color of the scrollbar thumb */
+::-webkit-scrollbar-thumb {
+  background-color: #95598A; /* Change to desired color */
+  border-radius: 8px; /* Change to desired border radius */
+  width:8px
+   /* Change to desired border color */
 }
