--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,9 @@ body {
   width:8px
    /* Change to desired border color */
 }
+.pdf-iframe {
+  margin-top: 4rem;
+  width: 100%;
+  height: 100vh;
+  border: none;
+}
